# pygeopkg

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
conversion/: to_wkb.py
core/: field.py  geopkg.py  srs.py  utils.py
pygeopkg/conversion/: to_geopkg_geom.py
pygeopkg/core/: geopkg.py
pygeopkg/resources/: gpkg_sql.py
pygeopkg/shared/: enumeration.py  messages.py  sql.py
shared/: constants.py  enumeration.py  sql.py
tests/: projection_strings.py  test_conversion.py  test_geopackage.py  utils.py
