[project]
name = "pygeopkg"
version = "0.1.3"
description = """\
    A Python library that allows for the creation and population \
    of OGC GeoPackage databases with write access.\
    """
readme = "README.md"
authors = [{ name = "Integrated Informatics Inc.", email = "contact@integrated-informatics.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["geopackage"]

[tool.setuptools]
packages = ["pygeopkg", "pygeopkg.conversion", "pygeopkg.core", "pygeopkg.resources", "pygeopkg.shared"]
include-package-data = true

[project.optional-dependencies]
dev = ["pytest", "coverage", "twine", "build"]

[project.urls]
Homepage = "https://github.com/realiii/pygeopkg"
